refactoring base functional; update ui

--- a/manifest.json
+++ b/manifest.json
@@ -4,16 +4,16 @@
     "description": "Record and transcribe your Google Meet sessions with one click.",
     "version": "1.0.0",
     "icons": {
-        "64": "asset/icon-64.png"
+        "100": "assets/icons-white-100.png"
     },
     "permissions": ["activeTab", "downloads", "tabCapture", "offscreen", "storage","tabs", "desktopCapture", "notifications"],
     "host_permissions": ["https://meet.google.com/*"],
-    "action": { "default_popup": "popup.html", "default_icon": { "64": "asset/icon-64.png" } },
+    "action": { "default_popup": "popup.html", "default_icon": { "100": "assets/icons-white-100.png" } },
     "background": { "service_worker": "background.js", "type": "module" },
     "content_scripts": [
       { "matches": ["https://meet.google.com/*"], "js": ["scrapingScript.js"], "run_at": "document_idle" }
     ],
     "web_accessible_resources": [
-      { "resources": ["offscreen.html", "asset/alert-32.png"], "matches": ["<all_urls>"] }
+      { "resources": ["offscreen.html", "assets/alert-32.png"], "matches": ["<all_urls>"] }
     ]
   }
